--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,10 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-with:
+        with: # <-- il manquait l'indentation ici
           github_user_name: rahmoundif
           svg_out_path: dist/github-contribution-grid-snake.svg
+
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
