--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Generate Datas
+
 on:
   schedule: # execute every 12 hours
-    - cron: "0 */12 * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
+
 jobs:
   build:
     name: Jobs to update datas
