--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
+            palette: github-dark  # 👈 fond clair et transparent
+          color_snake: "#00FFAA" # (optionnel) couleur du snake
+          color_dots: "#dcdcdc,#c0c0c0,#808080,#404040,#202020" # (optionnel)
 
       # Deploy to GitHub Pages
       - name: Push to GitHub Pages
