--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
-            palette: github-light  # 👈 fond clair et transparent
-          color_snake: "#00FFAA" # (optionnel) couleur du snake
-          color_dots: "#18223d,#c0c0c0,#808080,#404040,#202020" # (optionnel)
+          palette: github-dark
+          color_snake: "#00FFAA"
+          color_dots: "#00000000,#00000000,#00000000,#00000000,#00000000"
 
       # Deploy to GitHub Pages
       - name: Push to GitHub Pages
