--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
-          palette: github-dark
+          palette: github-light
           color_snake: "#00FFAA"
           color_dots: "#00000000,#00000000,#00000000,#00000000,#00000000"
 
