--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,9 @@ jobs:
         with:
           github_user_name: rahmoundif
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
-          palette: github-light
-          color_snake: "#00FFAA"
-          color_dots: "#00000000,#00000000,#00000000,#00000000,#00000000"
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
       - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
