--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate SVG and GIF (transparent + no white dots)
-        uses: Platane/snk@v3
+        uses:  Platane/snk/svg-only@v3
         with:
           github_user_name: rahmoundif
           outputs: |
