--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Generate SVGs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USER_NAME: ${{ secrets.USER_NAME }}   
-          BIRTHDATE:  ${{ secrets.BIRTHDATE }} 
+          USER_NAME: rahmoundif
+          BIRTHDATE: "1990-11-25"
         run: |
           npm run build
           npm run update
