--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -20,19 +20,16 @@ jobs:
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-      - run: npm ci
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
       - name: Generate SVGs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USER_NAME: ${{ secrets.USER_NAME }}
           BIRTHDATE: ${{ secrets.BIRTHDATE }}
         run: |
-          npm run build
-          npm run update
+          bun run build
+          bun run update
       - name: Install XML validation tool
         run: |
           sudo apt-get update -y
